--- a/client/src/pages/AdminDashboard.css
+++ b/client/src/pages/AdminDashboard.css
@@ -58,23 +58,23 @@ main {
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   display: grid;
-  grid-template-columns: 80px repeat(8, 1fr) 100px;
+  grid-template-columns: 80px repeat(8, minmax(0, 1fr)) 100px;
   gap: 10px;
   width: 100%;
   max-width: 1200px;
   cursor: pointer;
 }
 
-.student-item:hover {
+/* .student-item:hover {
   background-color: #f9f9f9;
-}
+} */
 
 .student-header {
   font-weight: bold;
   background-color: #333;
   color: #fff;
   display: grid;
-  grid-template-columns: 80px repeat(8, 1fr) 100px;
+  grid-template-columns: 80px repeat(8, minmax(0, 1fr)) 100px;
   gap: 10px;
   padding: 20px;
   margin: 10px 0;
